--- a/registration/templates/registration/multi_step_form.html
+++ b/registration/templates/registration/multi_step_form.html
@@ -464,6 +464,7 @@
                 <!-- The JavaScript will inject the pending submissions banner here. -->
             </div>
             <div class="form-container">
+                
                 <!-- Connection status -->
                 <div class="progress-container">
                     <div class="step-indicator">
@@ -524,16 +525,20 @@
                                 </div>
                             </div>
                             <div class="col-md-6">
-                                <div class="form-group">
-                                    <label class="form-label" for="{{ form.mobile_number.id_for_label }}">
-                                        <i class="fas fa-phone me-2"></i>Mobile Number *
-                                    </label>
-                                    {{ form.mobile_number }}
-                                    {% if form.mobile_number.errors %}
-                                        <div class="text-danger mt-1">{{ form.mobile_number.errors.0 }}</div>
-                                    {% endif %}
-                                </div>
-                            </div>
+    <div class="form-group">
+        <label class="form-label" for="{{ form.mobile_number.id_for_label }}">
+            <i class="fas fa-phone me-2"></i>Mobile Number *
+        </label>
+
+        {{ form.mobile_number }}
+
+        <div id="mobile-number-error" class="invalid-feedback" style="display: none;"></div>
+
+        {% if form.mobile_number.errors %}
+            <div class="text-danger mt-1">{{ form.mobile_number.errors.0 }}</div>
+        {% endif %}
+    </div>
+</div>
                         </div>
 
                         <div class="row">
