--- a/registration/templates/registration/dashboard.html
+++ b/registration/templates/registration/dashboard.html
@@ -285,14 +285,21 @@
                     </p>
                 </div>
                 <div class="col-md-4 text-end">
-                    <div class="d-flex flex-wrap justify-content-end">
-                        <a href="{% url 'registration:home' %}" class="btn btn-light btn-action me-2">
-                            <i class="fas fa-home me-2"></i>Home
-                        </a>
-                        <a href="/admin/" class="btn btn-outline-light btn-action">
-                            <i class="fas fa-cog me-2"></i>Admin
-                        </a>
-                    </div>
+                   <div class="d-flex flex-wrap justify-content-end">
+    
+    <a href="{% url 'registration:home' %}" class="btn btn-light btn-action me-2">
+        <i class="fas fa-home me-2"></i>Home
+    </a>
+    
+    <a href="{% url 'registration:job_requests' %}" class="btn btn-light btn-action me-2">
+        <i class="fas fa-briefcase me-2"></i>Jobs
+    </a>
+    
+    <a href="/admin/" class="btn btn-outline-light btn-action">
+        <i class="fas fa-cog me-2"></i>Admin
+    </a>
+
+</div>
                 </div>
             </div>
         </div>
