--- a/registration/templates/registration/job/job_requests.html
+++ b/registration/templates/registration/job/job_requests.html
@@ -10,6 +10,9 @@
 {% block content %}
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h2 class="page-title mb-0">Job Requests</h2>
+     <a href="{% url 'registration:create_job' %}" class="btn btn-primary">
+            <i class="fas fa-plus me-2"></i>Create New Job
+        </a>
     </div>
 
     <ul class="nav nav-pills sub-nav-pills mb-4" id="pills-tab" role="tablist">
