--- a/registration/templates/registration/job/base.html
+++ b/registration/templates/registration/job/base.html
@@ -94,6 +94,9 @@
                   <a class="btn btn-light btn-action me-2" href="{% url 'registration:profile_selector' %}">
         <i class="fas fa-id-card me-2"></i>Profiles
     </a>
+     <a class="nav-link" href="{% url 'registration:chat_contact_list' %}">
+                    <i class="fas fa-comments me-2"></i>Chat History
+                </a>
           
                 </div>
             </div>
