--- a/registration/templates/registration/job/base.html
+++ b/registration/templates/registration/job/base.html
@@ -97,7 +97,9 @@
      <a class="nav-link" href="{% url 'registration:chat_contact_list' %}">
                     <i class="fas fa-comments me-2"></i>Chat History
                 </a>
-          
+          <a class="nav-link" href="{% url 'registration:template_sender' %}">
+                    <i class="fas fa-comments me-2"></i>Chat template
+                </a>
                 </div>
             </div>
         </div>
@@ -115,10 +117,11 @@
     </main>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    
+    {% block extra_script %}{% endblock %}
     {% block extra_scripts %}{% endblock %}
-    
-{% block extra_scripts1 %}{%endblock%}
+     
+
+    {% block extra_scripts1 %}{%endblock%}
 
 </body>
 </html>
